[package]
name = "infomagr"
version = "0.1.0"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]

[dependencies]
filebuffer = "0.1.0"
# glium = "0.13.5"
glium = { git = "https://github.com/tomaka/glium", rev = "a37c771" }
num_cpus = "0.2"
rand = "0.3.14"
scoped_threadpool = "0.1.6"
thread-id = { git = "https://github.com/ruud-v-a/thread-id" }
time = "0.1"
