[package]
name    = "infomagr"
version = "0.1.0"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]

[dependencies]
filebuffer        = "0.1"
glium             = "0.13.5"
num_cpus          = "0.2"
rand              = "0.3.14"
scoped_threadpool = "0.1.6"
thread-id         = "1.0"
time              = "0.1"
